Tried asynchronous http calls for server push notifications