@@ -6,24 +6,31 @@
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.net.URI;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import static junit.framework.Assert.assertEquals;
 import junit.framework.TestCase;
-
 import org.apache.http.HttpResponse;
 import org.apache.http.NameValuePair;
 import org.apache.http.client.CookieStore;
 import org.apache.http.client.HttpClient;
 import org.apache.http.client.entity.UrlEncodedFormEntity;
+import org.apache.http.client.fluent.Async;
+import org.apache.http.client.fluent.Content;
+import org.apache.http.client.fluent.Request;
 import org.apache.http.client.methods.HttpPost;
 import org.apache.http.client.protocol.ClientContext;
+import org.apache.http.client.utils.URIBuilder;
 import org.apache.http.impl.client.BasicCookieStore;
 import org.apache.http.impl.client.DefaultHttpClient;
 import org.apache.http.message.BasicNameValuePair;
 import org.apache.http.protocol.BasicHttpContext;
 import org.apache.http.protocol.HttpContext;
+import org.apache.http.concurrent.FutureCallback;
 import org.json.JSONObject;
 
 /**
@@ -218,11 +225,30 @@ public class MinimalServerTest extends TestCase {
         //Test if normal login is successful
         BufferedReader rd = new BufferedReader(new InputStreamReader(mockResponse.getEntity().getContent()));
         rd.close();
-        mockRequest.setURI(new URI("http://localhost:5555/start"));
-        mockResponse = client.execute(mockRequest,httpContext);
-        rd = new BufferedReader(new InputStreamReader(mockResponse.getEntity().getContent()));
+        URL newURL = new URL("http://127.0.0.1:5555/start");
+        final Request request = Request.Post(newURL.toURI());
+        ExecutorService executor = Executors.newFixedThreadPool(1);
+        Async async = Async.newInstance().use(executor);
+        Future<Content> future = async.execute(request, new FutureCallback<Content>(){
+            @Override
+            public void failed(final Exception e){
+                e.printStackTrace();
+            }
+            
+            @Override
+            public void completed(final Content content){
+                System.out.println("Done");
+            }
+            @Override
+            public void cancelled (){
+                
+            }
+        });
+        
+        server.startSession();
+        String asyncResponse = future.get().asString();
         JSONObject jsonTest = new JSONObject();
         jsonTest.put("start", "true");
-        assertEquals("Testing if login was correctly failed due to incorrect username",jsonTest.toString(),rd.readLine());
+        assertEquals("Testing if login was correctly failed due to incorrect username",jsonTest.toString(),asyncResponse);
     }
 }
